<resources>
    <string name="app_name">Homework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Удалить?</string>
    <string name="delete">Удалить</string>
    <string name="update">Обновить</string>
    <string name="app_name_notepad">Блокнот</string>
    <string name="here_u_can_add_note">Здесь можно оставить заметку</string>
    <string name="event">Событие</string>
    <string name="open">Открыть</string>
    <string name="change_date">Изменить дату</string>
    <string name="choose_action">Выберите действие</string>
    <string name="info_about">Информация о странице</string>
    <string name="theme_already_run">Данная тема уже установлена</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="go_back">Назад</string>
    <string name="add">Добавить</string>
    <string name="cant_add_date">Невозможно добавить дату</string>
    <string name="detail_note">Заметка</string>
    <string name="detail_bdnote_toolbar">Событие</string>
    <string name="detail_bdnote_subtoolbar">Добавление даты, описания</string>
    <string name="descriptionnote">Описание</string>
    <string name="namenote">Тема</string>
    <string name="select_date">Выберите дату</string>
    <string name="input_note_name">Введите название заметки</string>
    <string name="input_description_hint">Введите текст заметки</string>
    <string name="deleteNote">Удалить</string>
    <string name="delete_dialog_title">Удалить заметку?</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="dismiss">Отменить</string>
    <string name="no">Нет</string>
    <string name="pick_date">Выбор даты</string>
    <string name="list_fragment_title">Список заметок</string>
    <string name="date">Дата</string>
    <string name="saveBd">Сохранить</string>
    <string name="set_theme">Чекай темы</string>
    <string name="cancel">Отмена</string>
    <string name="user">Пользователь</string>
    <string name="add_bd">Событие</string>
    <string name="add_note">Заметка</string>
    <string name="delete_all">Удалить все записи</string>
    <string name="list_of_notes_theme_number">Список заметок - Тема №</string>
    <string name="delete_all_question">Удалить все записи?</string>
    <string name="bd">BD</string>
    <string name="note">Заметка</string>
    <string name="plus_chain">+</string>
    <string name="birthday">birthday</string>
    <string name="birthday_add">BIRTHDAY</string>
    <string name="description">Описание</string>
    <string name="birthday_new">Добавить событие</string>
    <string name="open_note">Открыть заметку</string>
    <string name="description_note">Описание заметки</string>
    <string name="description_birthday">Описание события</string>
    <string name="date_birthday">Дата</string>
    <string name="settings">Настройки</string>
    <string name="select_theme">Выбор темы</string>
    <string name="first_theme">Первая тема</string>
    <string name="second_theme">Вторая тема</string>
    <string name="second_theme_select">Second Theme</string>
    <string name="third_theme">Третья тема</string>
    <string name="all_notes_delete">Все заметки удалены</string>
</resources>