<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:toots="http://schemas.android.com/tools"
    style="@style/MyBackgroundGradientStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <EditText
        android:id="@+id/note_name"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:hint="@string/namenote"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="18dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        toots:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/bd_date"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="18dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@id/note_descriprion"
        app:layout_constraintTop_toBottomOf="@+id/note_name"
        toots:ignore="MissingConstraints,SmallSp"
        />

    <EditText
        android:id="@+id/note_descriprion"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="30dp"
        android:gravity="left|top"
        android:hint="@string/descriptionnote"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bd_date"
        toots:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_back"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/go_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/btn_save"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_save"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        toots:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_delete"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/deleteNote"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_save"
        toots:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>

