<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/back"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.recycler.ListFragment">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:outlineAmbientShadowColor="@color/custom"
        android:outlineSpotShadowColor="@color/custom"
        android:visibility="gone"
        android:indeterminateTint="@color/custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        tools:ignore="UnusedAttribute" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:item="@layout/fragment_description" />

    <Button
        android:id="@+id/add_new"
        style="@style/MyButtonStyle"
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:background="@drawable/circle_btn"
        android:text="@string/plus_chain"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_bd"
        style="@style/MyButtonStyle"
        android:layout_width="102dp"
        android:layout_height="89dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_btn"
        android:visibility="gone"
        android:text="@string/bd"
        app:layout_constraintBottom_toTopOf="@id/add_new"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_note"
        style="@style/MyButtonStyle"
        android:layout_width="102dp"
        android:layout_height="89dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:background="@drawable/circle_btn"
        android:text="@string/note"
        app:layout_constraintBottom_toTopOf="@id/add_bd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/delete_all"
        style="@style/MyButtonStyle"
        android:layout_width="106dp"
        android:layout_height="85dp"
        android:layout_margin="16dp"
        android:background="@drawable/circle_btn"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>